--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#home">Portfolio</a>
+      <a class="navbar-brand" href="#home">Purushottam</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -67,7 +67,7 @@
         <div class="col-lg-12">
           <div class="section-title text-center">
             <h2>About Me</h2>
-            <p>Get to know more about my background and experience</p>
+            <p>Get to know more about my background and my journey</p>
           </div>
         </div>
       </div>
@@ -81,10 +81,10 @@
                 <strong>Education:</strong> B.Tech in Computer Science from Rajiv Gandhi University
               </div>
               <div class="info-item">
-                <strong>Higher Secondary:</strong> [Your Higher Secondary School]
+                <strong>Higher Secondary:</strong> Sardar Patel Collage, Hilsa
               </div>
               <div class="info-item">
-                <strong>Secondary:</strong> [Your Secondary School]
+                <strong>Secondary:</strong> Anand high school, Muftigunj
               </div>
               <div class="info-item">
                 <strong>Experience:</strong> 2+ years in web development
@@ -99,11 +99,19 @@
           <div class="about-stats">
             <div class="stat-item">
               <h3>25+</h3>
-              <p>Projects Completed</p>
+              <p>Projects Developing in verious technology </p>
             </div>
             <div class="stat-item">
               <h3>2+</h3>
-              <p>Years Experience</p>
+              <p>Years of coding experience</p>
+            </div>
+            <div class="stat-item">
+              <h3>5+</h3>
+              <p>Internships & real-world projects</p>
+            </div>
+            <div class="stat-item">
+              <h3>100%</h3>
+              <p>Commitment to learning & growth 🚀</p>
             </div>
           </div>
         </div>
@@ -118,7 +126,7 @@
         <div class="col-lg-12">
           <div class="section-title text-center">
             <h2>Resume</h2>
-            <p>Download my resume or view my experience</p>
+            <p>Download my resume </p>
           </div>
         </div>
       </div>
@@ -134,19 +142,15 @@
               <div class="resume-section">
                 <h4><i class="fas fa-briefcase"></i> Experience</h4>
                 <div class="experience-item">
-                  <h5>[Job Title]</h5>
-                  <p class="company">[Company Name] • [Duration]</p>
-                  <p>[Brief description of role and achievements]</p>
+                  <h5>Internship</h5>
+                  <p class="company">People Tech Group • 6 month</p>
+                  <p>Assisted in developing and maintaining responsive web applications using C++, Python, Android </p>
+                  <p>Collaborated with senior developers to implement new features and debug issues, improving site performance and user experience.</p>
+                  <p>Gained hands-on exposure to Git/GitHub workflows, REST APIs, Linux OS and cross-browser compatibility testing.</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="resume-section">
-                <h4><i class="fas fa-certificate"></i> Certifications</h4>
-                <div class="cert-item">
-                  <p>[Certification Name] - [Issuing Organization]</p>
-                  <p>[Another Certification] - [Organization]</p>
-                </div>
+            </div>
               </div>
             </div>
           </div>
@@ -155,109 +159,197 @@
     </div>
   </section>
 
-  <!-- Testimonials Section -->
-  <section id="testimonials" class="section-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="section-title text-center">
-            <h2>Testimonials</h2>
-            <p>What others say about my work</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="testimonial-card">
-            <div class="testimonial-content">
-              <p>"[Testimonial text from client or colleague about your work quality and professionalism]"</p>
-            </div>
-            <div class="testimonial-author">
-              <h5>[Client/Colleague Name]</h5>
-              <p>[Position, Company]</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="testimonial-card">
-            <div class="testimonial-content">
-              <p>"[Another testimonial highlighting different aspects of your skills]"</p>
-            </div>
-            <div class="testimonial-author">
-              <h5>[Client/Colleague Name]</h5>
-              <p>[Position, Company]</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="testimonial-card">
-            <div class="testimonial-content">
-              <p>"[Third testimonial showcasing your problem-solving abilities]"</p>
-            </div>
-            <div class="testimonial-author">
-              <h5>[Client/Colleague Name]</h5>
-              <p>[Position, Company]</p>
-            </div>
-          </div>
+<!- Certifications Section -->
+ <section id="certifications" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title text-center">
+          <h2>Certifications</h2>
+          <p>Courses & credentials I’ve earned</p>
         </div>
       </div>
     </div>
-  </section>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>Full Stack Development</h4>
+          <p>HTML, CSS, JavaScript - NareshIT</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>React Basics</h4>
+          <p>Meta Frontend Certification</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>Responsive Web Design</h4>
+          <p>freeCodeCamp</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="achievements" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title text-center">
+          <h2>Achievements</h2>
+          <p>Milestones I’m proud of</p>
+        </div>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>25+ Projects</h4>
+          <p>Built across verious web technologies</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>Hackathon Participation</h4>
+          <p>College-level coding hackathon</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>GitHub Contributions</h4>
+          <p>100+ commits showcasing continuous learning</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <section id="learning" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title text-center">
+          <h2>My Learning Journey</h2>
+          <p>Steps in becoming a web developer</p>
+        </div>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>2022</h4>
+          <p>Started learning Python, HTML, CSS & JavaScript</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>2023</h4>
+          <p>Built first full-stack project with React & Node</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3 shadow-sm">
+          <h4>2025</h4>
+          <p>Internship at <strong>People Tech Group</strong>, contributing to real-world projects</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Blog Section -->
-  <section id="blog" class="section-padding bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="section-title text-center">
-            <h2>Blog</h2>
-            <p>Latest articles and insights</p>
+<section id="blog" class="section-padding bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title text-center">
+          <h2>Blog</h2>
+          <p>Latest articles and insights</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+
+      <!-- Blog 1 -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="blog-card">
+          <div class="blog-image">
+            <img src="https://via.placeholder.com/400x200" alt="GitHub Copilot">
+          </div>
+          <div class="blog-content">
+            <h4>Boosting Productivity with GitHub Copilot</h4>
+            <p class="blog-date">Jan 2025</p>
+            <p>A look at how GitHub Copilot transforms coding by acting as your AI pair programmer.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="blog-card">
-            <div class="blog-image">
-              <img src="https://via.placeholder.com/400x200" alt="Blog Post">
-            </div>
-            <div class="blog-content">
-              <h4>[Blog Post Title]</h4>
-              <p class="blog-date">[Date]</p>
-              <p>[Brief excerpt of the blog post content...]</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-            </div>
+
+      <!-- Blog 2 -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="blog-card">
+          <div class="blog-image">
+            <img src="https://via.placeholder.com/400x200" alt="Future of AI">
+          </div>
+          <div class="blog-content">
+            <h4>The Future of AI in Everyday Life</h4>
+            <p class="blog-date">Feb 2025</p>
+            <p>From healthcare to creative arts, AI is shaping the world faster than ever before.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="blog-card">
-            <div class="blog-image">
-              <img src="https://via.placeholder.com/400x200" alt="Blog Post">
-            </div>
-            <div class="blog-content">
-              <h4>[Another Blog Post Title]</h4>
-              <p class="blog-date">[Date]</p>
-              <p>[Brief excerpt of another blog post...]</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-            </div>
+      </div>
+
+      <!-- Blog 3 -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="blog-card">
+          <div class="blog-image">
+            <img src="https://via.placeholder.com/400x200" alt="Prompt Engineering">
+          </div>
+          <div class="blog-content">
+            <h4>Mastering Prompt Engineering</h4>
+            <p class="blog-date">Mar 2025</p>
+            <p>Tips and techniques to get the best results when working with AI tools.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="blog-card">
-            <div class="blog-image">
-              <img src="https://via.placeholder.com/400x200" alt="Blog Post">
-            </div>
-            <div class="blog-content">
-              <h4>[Third Blog Post Title]</h4>
-              <p class="blog-date">[Date]</p>
-              <p>[Brief excerpt of third blog post...]</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-            </div>
+      </div>
+
+      <!-- Blog 4 -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="blog-card">
+          <div class="blog-image">
+            <img src="https://via.placeholder.com/400x200" alt="Linux vs Windows">
+          </div>
+          <div class="blog-content">
+            <h4>Linux vs Windows: Which One Should Developers Choose?</h4>
+            <p class="blog-date">Apr 2025</p>
+            <p>A balanced comparison of Linux and Windows for coding, development, and productivity.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog 5 -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="blog-card">
+          <div class="blog-image">
+            <img src="https://via.placeholder.com/400x200" alt="Portfolio Tips">
+          </div>
+          <div class="blog-content">
+            <h4>How to Build a Killer Developer Portfolio</h4>
+            <p class="blog-date">May 2025</p>
+            <p>Stand out in tech with a portfolio that highlights your skills and projects effectively.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Skills Section -->
   <section id="skills" class="section-padding bg-light">
@@ -467,14 +559,42 @@
       <div class="row mt-5">
         <div class="col-lg-12">
           <div class="contact-info text-center">
+            <!-- Email -->
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
               <p>purush857899@gmail.com</p>
             </div>
+
+  <!-- Phone -->
+  <div class="contact-item">
+    <i class="fas fa-phone"></i>
+    <p>+91 98765 43210</p>
+  </div>
+
+  <!-- LinkedIn -->
+  <div class="contact-item">
+    <i class="fab fa-linkedin"></i>
+    <p><a href="https://www.linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+  </div>
+
+  <!-- GitHub -->
+  <div class="contact-item">
+    <i class="fab fa-github"></i>
+    <p><a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+  </div>
+
+  <!-- Location -->
+  <div class="contact-item">
+    <i class="fas fa-map-marker-alt"></i>
+    <p>Hyderabad, India</p>
+  </div>
+</div>
+
             <div class="social-links">
               <a href="#"><i class="fab fa-linkedin"></i></a>
               <a href="#"><i class="fab fa-github"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-X"></i></a>
+              <a href="#"><i class="fab fa-instagram"</i></a>
             </div>
           </div>
         </div>
