--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Purushottam Kumar - Portfolio</title>
+  <title>Portfolio</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
         <div class="col-lg-6">
           <div class="hero-content">
             <h1 class="hero-title">Hi, I'm <span class="text-primary">Purushottam Kumar</span></h1>
-            <p class="hero-subtitle">Full-Stack Developer</p>
+            <p class="hero-subtitle">Full-Stack Developer • Problem Solver • Logical Thinker • Detail-Oriented • Self-Motivated • Team Player • Adaptable • Time Management • Curiosity • Resilience</p>
             <p class="hero-description">Building digital experiences with clean code and creative design. Passionate
               about solving real-world problems through technology.</p>
             <div class="hero-buttons">
